src/test/deca/context/valid/class/valid_extend_method_call.deca
// Description:
//    Test of a class declaration
//    Test rule 1.3
//
// Result:
//      Hello World !
//      1
//
// History:
//    created on 09/01/2025

class Dummy {
    int a = 5;
    void add(int a, int b, int c) {
        this.a = a + b + c;
        println(this.a);
    }
}

class Dummy2 extends Dummy {

}

{
    Dummy2 d = new Dummy2();
    d.add(1, 2, 3);
}
